--- a/index.html
+++ b/index.html
@@ -4,27 +4,116 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Discord</title>
-
+ 
         <link rel="stylesheet" href="./css/style.css">
     </head>
 
-    <body>
+    <body class="container">
         <!-- Intestazione -->
         <header class="debug">
-            aaa
-            <div class="debug">aaaa</div>
+            <nav class="container align d-flex debug">
+                <a href="#">logo</a>
+                <div class="container debug">
+                    <ul class="d-flex debug">
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perchè Discord</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+            <a href="#">Accedi</a>
+        </nav>
         </header>
 
         <!-- Main -->
-        <main class="debug">
-            aaaa
-            <div class="debug">aaaa</div>
+        <main class="d-flex container debug">
+            <section id="hero" class=" container d-flex debug">
+                <div class="container-small d-flex debug">
+                    <div class="content debug">
+                        aaa
+                    </div>
+                    <div class="image debug">
+                        bbb
+                    </div>
+                </div>
+            </section>
+
+            <section id="place" class=" container d-flex debug">
+                <div class="container d-flex debug">
+                    <div class="content debug">
+                        aaa
+                    </div>
+                    <div class="image debug">
+                        bbb
+                    </div>
+                </div>
+            </section>
+
+            <section id="meet" class=" container d-flex debug">
+                <div class="container d-flex debug">
+                    <div class="content debug">
+                        aaa
+                    </div>
+                    <div class="image debug">
+                        bbb
+                    </div>
+                </div>
+            </section>
+
+            <section id="community" class=" container d-flex debug">
+                <div class="container d-flex debug">
+                    <div class="content debug">
+                        aaa
+                    </div>
+                    <div class="image debug">
+                        bbb
+                    </div>
+                </div>
+            </section>
+
+            <section id="tecnology" class=" container d-flex debug">
+                <div class="container-small d-flex debug">
+                    <div class="content debug">
+                        aaa
+                    </div>
+                    <div class="image debug">
+                        bbb
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- Footer -->
         <footer class="debug">
-            aaaa
-            <div class="debug">aaaa</div>
+            <div class="container debug">
+                <nav class="d-flex space-between debug">
+                    <div class="debug">left</div>
+                    <ul class="debug">
+                        <li>
+                            Lista1
+                        </li>
+                    </ul>
+                    <ul class="debug">
+                        <li>
+                            Lista2
+                        </li>
+                    </ul>
+                    <ul class="debug">
+                        <li>
+                            Lista3
+                        </li>
+                    </ul>
+                    <ul class="debug">
+                        <li>
+                            Lista4
+                        </li>
+                    </ul>
+                </nav>
+                <div>
+                    sotto
+                </div>
+            </div>
 	    </footer>
     </body>
 </html>
