--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
 
-    <body class="container">
+    <body>
         <!-- Intestazione -->
-        <header class="debug">
-            <nav class="container align d-flex debug">
+        <header class="bg-blue debug">
+            <nav class="container space-between d-flex debug">
                 <a href="#">logo</a>
-                <div class="container debug">
                     <ul class="d-flex debug">
                         <li><a href="#">Scarica</a></li>
                         <li><a href="#">Perchè Discord</a></li>
@@ -21,21 +20,16 @@
                         <li><a href="#">Nitro</a></li>
                         <li><a href="#">Assistenza</a></li>
                     </ul>
-                </div>
             <a href="#">Accedi</a>
         </nav>
         </header>
 
         <!-- Main -->
-        <main class="d-flex container debug">
+        <main class="debug">
             <section id="hero" class=" container d-flex debug">
-                <div class="container-small d-flex debug">
-                    <div class="content debug">
+                <div class="container-small debug">
                         aaa
-                    </div>
-                    <div class="image debug">
                         bbb
-                    </div>
                 </div>
             </section>
 
@@ -50,8 +44,8 @@
                 </div>
             </section>
 
-            <section id="meet" class=" container d-flex debug">
-                <div class="container d-flex debug">
+            <section id="meet" class="bg-gray container d-flex debug">
+                <div class="container row-reverse d-flex debug">
                     <div class="content debug">
                         aaa
                     </div>
@@ -72,20 +66,16 @@
                 </div>
             </section>
 
-            <section id="tecnology" class=" container d-flex debug">
-                <div class="container-small d-flex debug">
-                    <div class="content debug">
-                        aaa
-                    </div>
-                    <div class="image debug">
+            <section id="tecnology" class="bg-gray container d-flex debug">
+                <div class="container-small debug">
+                        aaa 
                         bbb
-                    </div>
                 </div>
             </section>
         </main>
 
         <!-- Footer -->
-        <footer class="debug">
+        <footer class="bg-dark debug">
             <div class="container debug">
                 <nav class="d-flex space-between debug">
                     <div class="debug">left</div>
@@ -110,8 +100,9 @@
                         </li>
                     </ul>
                 </nav>
-                <div>
-                    sotto
+                <div class="d-flex space-between debug">
+                    <div>logo</div>
+                    <div >bottone</div>
                 </div>
             </div>
 	    </footer>
